web/wp-content/themes/cncf-theme/source/scss/components/_events.scss
// home override?
// .home .wp-block-lf-upcoming-events {}

.events-wrapper {
    display: grid;
    grid-gap: 1em;
    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
    grid-auto-rows: minmax(220px, auto);

    @media (min-width: 1000px) {
        grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
        grid-gap: 1.5em;
        height: 100%;
    }
}

.event-overlay {
    width: 100%;
    height: 100%;
    object-fit: cover;
    position: absolute;
    z-index: 2;
    opacity: 0.75;
}

.event-content-wrapper {
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    top: 50%;
    transform: translateY(-50%);
    color: $white;
    font-weight: 600;
    padding: 1em;
    font-size: 1em;

    @media (min-width: 768px) {
        font-size: 1.25em;
    }
}

.event-logo {
    // restricts image logo size.
    height: 100px;
    max-height: 100px;
    max-width: 100%;
    display: flex;
    flex-direction: column;
    align-content: center;
    justify-content: center;
    margin-bottom: 1em;

    a {
        display: flex;
    }

    img {
        height: auto;
        max-width: 100%;
        max-height: 100%;
    }


    .single-cncf_event & {
        height: 200px;
        max-height: 200px;
        max-width: 100%;
        margin-bottom: 2em;
    }

}

.event-title {
    margin: 0;
    max-width: 80%;
    margin-left: auto;
    margin-right: auto;
    font-size: 1.25em;

    @media (min-width: 1024px) {
        font-size: 1.1em;
        max-width: 90%;
    }

    a {
        color: $white;

    }

    .single-cncf_event & {
        font-size: 2em;
        margin-bottom: 1em;
    }
}

.event-date {
    margin-bottom: 0.5em;
}

.event-city {
    margin-bottom: 1em;
}

// Event Singular
.event-single {
    text-align: center;

    .event-box {
        height: 250px;

        @media (min-width: 600px) {
            height: 400px;
        }

        width: 500px;

        max-width: 100%;
        margin-left: auto;
        margin-right: auto;
        margin-top: 2em;
    }
}

